--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Mochiy+Pop+One&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -24,6 +28,8 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- JS -->
     <script src="js/script.js" type="module" defer></script>
+    <!-- Icon -->
+    <link rel="icon" href="https://static.wikia.nocookie.net/722d3979-d955-4ac3-abc7-37147d1874bd/scale-to-width/755" type="image/x-icon">
     <title>Kirby's To-Do List</title>
   </head>
   <body>
